manifests-successful/apim-4.3.6.tgz-manifest.yaml
---
# Source: apim/templates/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-apim-api
  labels:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.3.6"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim-4.3.6
  annotations:
spec:
  type: "ClusterIP"
  ports:
    - port: 83
      targetPort: 8083
      protocol: TCP
      
      
      appProtocol: http
      
      
      name: api
  selector:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: "api"
---
# Source: apim/templates/gateway/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-apim-gateway
  labels:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.3.6"
    app.kubernetes.io/component: "gateway"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim-4.3.6
  annotations:
spec:
  type: "ClusterIP"
  ports:
    - port: 82
      targetPort: 8082
      protocol: TCP
      
      appProtocol: http
      
      name: gateway
  selector:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: "gateway"
---
# Source: apim/templates/portal/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-apim-portal
  labels:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.3.6"
    app.kubernetes.io/component: "portal"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim-4.3.6
  annotations:
spec:
  type: "ClusterIP"
  ports:
    - port: 8003
      targetPort: 8080
      protocol: TCP
      
      appProtocol: http
      
      name: portal
  selector:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: "portal"
---
# Source: apim/templates/ui/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-apim-ui
  labels:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.3.6"
    app.kubernetes.io/component: "ui"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim-4.3.6
  annotations:
spec:
  type: "ClusterIP"
  ports:
    - port: 8002
      targetPort: 8080
      protocol: TCP
      
      appProtocol: http
      
      name: ui
  selector:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: "ui"
---
# Source: apim/templates/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-apim-api
  labels:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.3.6"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim-4.3.6
  annotations:
spec:
  strategy: 
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: apim
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: "api"
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "false"
        checksum/config: adede239d833ff42e48db5f9d4e84857c4dd41f45f88de66bcc10c50e526d2fd
      labels:
        app.kubernetes.io/name: apim
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "4.3.6"
        app.kubernetes.io/component: "api"
    spec:
      securityContext: 
        null
      serviceAccountName: my-release-apim
      affinity: 
        {}
      nodeSelector: 
        {}
      topologySpreadConstraints: 
        []
      tolerations: 
        []
      terminationGracePeriodSeconds: 30
      containers:
        - name: my-release-apim-api
          image: "graviteeio/apim-management-api:4.3.6"
          imagePullPolicy: Always
          securityContext: 
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: http
              containerPort: 8083
            - name: api-techapi
              containerPort: 18083
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 30
            tcpSocket:
              port: http
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 30
            tcpSocket:
              port: http
          startupProbe:
            failureThreshold: 30
            periodSeconds: 10
            tcpSocket:
              port: http

          resources: 
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: 200m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /opt/graviteeio-management-api/config/gravitee.yml
              subPath: gravitee.yml            
      volumes:
        - name: config
          configMap:
            name: my-release-apim-api
---
# Source: apim/templates/gateway/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-apim-gateway
  labels:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.3.6"
    app.kubernetes.io/component: "gateway"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim-4.3.6
  annotations:
spec:
  strategy: 
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: apim
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: "gateway"
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "false"
        checksum/config: 3498af2f1e0b61d0e745025e49a79dac9a9a0efd427b1edafa6d676e1fc3a32c
      labels:
        app.kubernetes.io/name: apim
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "4.3.6"
        app.kubernetes.io/component: "gateway"
    spec:
      securityContext: 
        null
      serviceAccountName: my-release-apim
      affinity: 
        {}
      nodeSelector: 
        {}
      topologySpreadConstraints: 
        []
      tolerations: 
        []
      terminationGracePeriodSeconds: 30
      containers:
        - name: my-release-apim-gateway
          image: "graviteeio/apim-gateway:4.3.6"
          imagePullPolicy: Always
          securityContext: 
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: http
              containerPort: 8082
            - name: gateway-techapi
              containerPort: 18082
          livenessProbe:
            periodSeconds: 15
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            httpGet:
              path: /_node/health?probes=http-server
              scheme: HTTP
              port: 18082
              httpHeaders:
                - name: Authorization
                  value: Basic YWRtaW46YWRtaW5hZG1pbg==
          readinessProbe:
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 2
            httpGet:
              path: /_node/health?probes=sync-process
              scheme: HTTP
              port: 18082
              httpHeaders:
                - name: Authorization
                  value: Basic YWRtaW46YWRtaW5hZG1pbg==
          startupProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 29
            httpGet:
              path: /_node/health?probes=http-server
              scheme: HTTP
              port: 18082
              httpHeaders:
                - name: Authorization
                  value: Basic YWRtaW46YWRtaW5hZG1pbg==
          resources: 
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /opt/graviteeio-gateway/config/gravitee.yml
              subPath: gravitee.yml            
      volumes:
        - name: config
          configMap:
            name: my-release-apim-gateway
---
# Source: apim/templates/portal/portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-apim-portal
  labels:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.3.6"
    app.kubernetes.io/component: "portal"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim-4.3.6
  annotations:
spec:
  strategy: 
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: apim
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: "portal"
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "false"
        checksum/config: e7101cb306a2d2794559984d00fadc855bfebb5329bc74a723f5fdab89b9c396
      labels:
        app.kubernetes.io/name: apim
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "4.3.6"
        app.kubernetes.io/component: "portal"
    spec:
      securityContext: 
        null
      affinity: 
        {}
      nodeSelector: 
        {}
      topologySpreadConstraints: 
        []
      tolerations: 
        []
      terminationGracePeriodSeconds: 30
      containers:
        - name: my-release-apim-portal
          image: "graviteeio/apim-portal-ui:4.3.6"
          imagePullPolicy: Always
          securityContext: 
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 101
          ports:
            - name: http
              containerPort: 8080
          lifecycle:
            preStop:
              exec:
                command: ['sh','-c', 'sleep 5 && /usr/sbin/nginx -s quit']
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          resources: 
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/assets/config.json
              subPath: config.json
      volumes:
        - name: config
          configMap:
            name: my-release-apim-portal
---
# Source: apim/templates/ui/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-apim-ui
  labels:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.3.6"
    app.kubernetes.io/component: "ui"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim-4.3.6
  annotations:
spec:
  strategy: 
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: apim
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: "ui"
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "false"
        checksum/config: 50181c6410704e8bf2318a5a55f11abe76ad09d4a968c52180b114f8f982a7e1
      labels:
        app.kubernetes.io/name: apim
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "4.3.6"
        app.kubernetes.io/component: "ui"
    spec:
      securityContext: 
        null
      affinity: 
        {}
      nodeSelector: 
        {}
      topologySpreadConstraints: 
        []
      tolerations: 
        []
      terminationGracePeriodSeconds: 30
      containers:
        - name: my-release-apim-ui
          image: "graviteeio/apim-management-ui:4.3.6"
          imagePullPolicy: Always
          securityContext: 
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 101
          ports:
            - name: http
              containerPort: 8080
          lifecycle:
            preStop:
              exec:
                command: ['sh','-c', 'sleep 5 && /usr/sbin/nginx -s quit']
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          resources: 
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/constants.json
              subPath: constants.json
      volumes:
        - name: config
          configMap:
            name: my-release-apim-ui
---
# Source: apim/templates/api/api-ingress-management.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-apim-api-management
  labels:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.3.6"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim-4.3.6
  annotations:
    
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: "etag on;\nproxy_pass_header ETag;\nproxy_pass_header if-match;\n"
spec:
  rules:
  - host: "apim.example.com"
    http:
      paths:
      - pathType: Prefix
        path: /management
        backend:
          service:
            name: my-release-apim-api
            port:
              number: 83
---
# Source: apim/templates/api/api-ingress-portal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-apim-api-portal
  labels:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.3.6"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim-4.3.6
  annotations:
    
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: "etag on;\nproxy_pass_header ETag;\nproxy_set_header if-match \"\";\n"
spec:
  rules:
  - host: "apim.example.com"
    http:
      paths:
      - pathType: Prefix
        path: /portal
        backend:
          service:
            name: my-release-apim-api
            port:
              number: 83
---
# Source: apim/templates/gateway/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-apim-gateway
  labels:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.3.6"
    app.kubernetes.io/component: "gateway"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim-4.3.6
  annotations:
    
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "apim.example.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: my-release-apim-gateway
            port:
              number: 82
---
# Source: apim/templates/portal/portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-apim-portal
  labels:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.3.6"
    app.kubernetes.io/component: "portal"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim-4.3.6
  annotations:
    
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: "etag on;\nproxy_pass_header ETag;\n"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: "apim.example.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: my-release-apim-portal
            port:
              number: 8003
---
# Source: apim/templates/ui/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-apim-ui
  labels:
    app.kubernetes.io/name: apim
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.3.6"
    app.kubernetes.io/component: "ui"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: apim-4.3.6
  annotations:
    
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: "etag on;\nproxy_pass_header ETag;\n"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  rules:
  - host: "apim.example.com"
    http:
      paths:
      - pathType: Prefix
        path: /console(/.*)?
        backend:
          service:
            name: my-release-apim-ui
            port:
              number: 8002
